--- a/BotVentic/BotVentic/BotVentic.csproj
+++ b/BotVentic/BotVentic/BotVentic.csproj
@@ -72,6 +72,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>if $(ConfigurationName) == Release "C:\Program Files (x86)\WinSCP\WinSCP.com" /script=E:\botventicuploadscript.txt</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
