invites only over PM, reply with success or fail

--- a/BotVentic/BotVentic/BotVentic.csproj
+++ b/BotVentic/BotVentic/BotVentic.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Discord.Net, Version=0.7.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Discord.Net.0.7.3-beta3\lib\net45\Discord.Net.dll</HintPath>
+      <HintPath>..\packages\Discord.Net.0.7.3\lib\net45\Discord.Net.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
