--- a/BotVentic/BotVentic/packages.config
+++ b/BotVentic/BotVentic/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Discord.Net" version="0.7.3-beta3" targetFramework="net452" />
+  <package id="Discord.Net" version="0.7.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="RestSharp" version="105.2.3" targetFramework="net452" />
   <package id="WebSocketSharp" version="1.0.3-rc9" targetFramework="net452" />
