use a struct instead of string[] to properly represent stored emotes

--- a/BotVentic/BotVentic/BotVentic.csproj
+++ b/BotVentic/BotVentic/BotVentic.csproj
@@ -59,6 +59,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EmoteInfo.cs" />
     <Compile Include="Json\Config.cs" />
     <Compile Include="Json\EmoticonImages.cs" />
     <Compile Include="Json\Streams.cs" />
