--- a/BotVentic/BotVentic/packages.config
+++ b/BotVentic/BotVentic/packages.config
@@ -2,6 +2,6 @@
 <packages>
   <package id="Discord.Net" version="0.7.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net452" />
-  <package id="RestSharp" version="105.2.3" targetFramework="net452" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net452" requireReinstallation="true" />
   <package id="WebSocketSharp" version="1.0.3-rc9" targetFramework="net452" />
 </packages>
