add framework to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,5 @@
 ﻿language: csharp
 solution: BotVentic/BotVentic.sln
+script:
+    - cd BotVentic
+    - xbuild /p:TargetFrameworkVersion="v4.5" /p:Configuration=Release BotVentic.sln
