oauth join flow

--- a/BotVentic/BotVentic/config.sample.json
+++ b/BotVentic/BotVentic/config.sample.json
@@ -1,4 +1,5 @@
 ﻿{
+  "auth_url": "https://discordapp.com/oauth2/authorize?client_id=<YOUR_CLIENT_ID>&scope=bot&permissions=19456",
   "token": "",
   "editthreshold": 1,
   "editmax":  10
