run nuget restore

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 ﻿language: csharp
 solution: BotVentic/BotVentic.sln
-script:
-    - cd BotVentic
-    - xbuild /p:TargetFrameworkVersion="v4.5" /p:Configuration=Release BotVentic.sln
+mono:
+    - latest
+install:
+    - nuget restore BotVentic.sln
