--- a/BotVentic/BotVentic/packages.config
+++ b/BotVentic/BotVentic/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Discord.Net" version="0.9.0-rc3-3" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net461" />
+  <package id="Discord.Net" version="0.9.5" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="Nito.AsyncEx" version="3.0.1" targetFramework="net461" />
   <package id="RestSharp" version="105.2.3" targetFramework="net461" />
   <package id="WebSocket4Net" version="0.14.1" targetFramework="net461" />
